tests/fixtures/errors/division_by_zero.gcl
param x: Dimensionless = 1.0;
node y: Dimensionless = @x / 0.0;
